--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -7658,3 +7658,4 @@ CONFIG_PACKAGE_uuidgen=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+CONFIG_PACKAGE_luci-theme-argon=y
