--- a/.github/workflows/build-openwrt-system-image.yml
+++ b/.github/workflows/build-openwrt-system-image.yml
@@ -240,6 +240,7 @@ on:
           - ophub
           - angel
           - yourname
+          - none
 
 env:
   FEEDS_CONF: config/${{ inputs.source_branch }}/feeds.conf.default
