--- a/.github/workflows/build-openwrt-system-image.yml
+++ b/.github/workflows/build-openwrt-system-image.yml
@@ -16,7 +16,7 @@ on:
         type: choice
         options:
           - openwrt_main
-          - immortalwrt_master
+          - immortalwrt_openwrt-24.10
           - lede_master
       openwrt_board:
         description: "Select device board"
