--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -76,11 +76,11 @@ on:
       kernel_sign:
         description: "Set the kernel custom signature"
         required: false
-        default: "-ophub"
+        default: "-1-e9a99d17d12c33240ed4dbf5cdb9cecc"
         type: choice
         options:
           - -ophub
-          - -yourname
+          - -1-e9a99d17d12c33240ed4dbf5cdb9cecc
 
 env:
   TZ: Etc/UTC
